--- a/src/MainWindow.ui
+++ b/src/MainWindow.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>400</width>
-    <height>300</height>
+    <width>855</width>
+    <height>535</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -25,8 +25,8 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>400</width>
-     <height>23</height>
+     <width>855</width>
+     <height>30</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuFile">
@@ -60,7 +60,7 @@
     <bool>true</bool>
    </property>
    <property name="text">
-    <string>Line</string>
+    <string>&amp;Line</string>
    </property>
   </action>
   <action name="actionCircle">
@@ -68,7 +68,7 @@
     <bool>true</bool>
    </property>
    <property name="text">
-    <string>Ellipse</string>
+    <string>&amp;Ellipse</string>
    </property>
   </action>
   <action name="actionRectangle">
@@ -76,7 +76,7 @@
     <bool>true</bool>
    </property>
    <property name="text">
-    <string>Rectangle</string>
+    <string>&amp;Rectangle</string>
    </property>
   </action>
   <action name="actionSelection">
@@ -84,7 +84,7 @@
     <bool>true</bool>
    </property>
    <property name="text">
-    <string>Selection</string>
+    <string>&amp;Selection</string>
    </property>
   </action>
  </widget>
