Add new project action

--- a/src/MainWindow.ui
+++ b/src/MainWindow.ui
@@ -36,13 +36,14 @@
      <x>0</x>
      <y>0</y>
      <width>1200</width>
-     <height>23</height>
+     <height>20</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuFile">
     <property name="title">
      <string>Fi&amp;le</string>
     </property>
+    <addaction name="actionNew_Project"/>
     <addaction name="actionLoad"/>
     <addaction name="actionSave_as"/>
     <addaction name="separator"/>
@@ -172,6 +173,11 @@
   <action name="actionLoad">
    <property name="text">
     <string>&amp;Load...</string>
+   </property>
+  </action>
+  <action name="actionNew_Project">
+   <property name="text">
+    <string>New Project...</string>
    </property>
   </action>
  </widget>
